2nd commit removing git yolov5

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,27 @@
     "\n",
     "YOLO_DIR = os.path.join('models','yolov5')\n",
     "WEIGHTS_DIR = os.path.join('best.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'models/yolov5'...\n",
+      "remote: Enumerating objects: 12164, done.\u001b[K\n",
+      "remote: Total 12164 (delta 0), reused 0 (delta 0), pack-reused 12164\u001b[K\n",
+      "Receiving objects: 100% (12164/12164), 11.93 MiB | 7.86 MiB/s, done.\n",
+      "Resolving deltas: 100% (8425/8425), done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git clone https://github.com/ultralytics/yolov5.git {YOLO_DIR}"
    ]
   },
   {
